<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.umflint.csc.earthmattersv2.ux.AddBoothActivity">

    <TextView
        android:text="@string/enter_booth_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:paddingBottom="36dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/boothNameEditText"
        android:hint="@string/booth_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/boothNumberEditText"
        android:hint="@string/booth_number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEditText"
        android:ems="10"
        android:id="@+id/boothWebsiteEditText"
        android:hint="@string/booth_website"
        />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textMultiLine|textCapSentences"
        android:id="@+id/boothDescriptionEditText"
        android:hint="@string/booth_description"
        android:scrollHorizontally="false"
        android:layout_height="270dp"
        android:gravity="top|center_vertical"
         />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/add_booth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_booth_button"
        />


</LinearLayout>
