<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_sub_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.umflint.csc.earthmattersv2.ux.CreateEventActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:text="@string/add_sub_event_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subEventHeader"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginBottom="24dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/subEventNameEditText"
        android:hint="@string/enter_sub_event_name" />

    <TextView
        android:hint="@string/select_date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subEventDateTextView"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:id="@+id/linearLayoutSubEventTimes"
        android:layout_marginTop="24dp">


        <TextView
            android:hint="@string/select_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startTimeTextView"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp" />

        <TextView
            android:hint="@string/select_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endTimeTextView"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:inputType="textPersonName"
        android:hint="@string/enter_sub_event_description"
        android:ems="10"
        android:id="@+id/subEventDescriptionEditText"
        android:scrollHorizontally="false"
        android:layout_marginTop="36dp"
        android:gravity="top" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/add_sub_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addSubEventButton"
        android:layout_marginTop="36dp" />
</LinearLayout>
